// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src | components | forms | FormFooter match the snapshots hidden separator, cancel and submit buttons 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormFooter
    cancel={false}
    className="fake className"
    externalLink={null}
    submit={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        false,
        false,
        false,
        false,
      ],
      "className": "pc-final-form-footer dotted-top-2x-white py7 flex-0 flex-columns text-center items-center fs20 fake className",
    },
    "ref": null,
    "rendered": Array [
      false,
      false,
      false,
      false,
      false,
    ],
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          false,
          false,
          false,
          false,
        ],
        "className": "pc-final-form-footer dotted-top-2x-white py7 flex-0 flex-columns text-center items-center fs20 fake className",
      },
      "ref": null,
      "rendered": Array [
        false,
        false,
        false,
        false,
        false,
      ],
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`src | components | forms | FormFooter match the snapshots hide cancel button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormFooter
    cancel={false}
    className="fake className"
    externalLink={null}
    submit={
      Object {
        "className": "fake submit className",
        "disabled": false,
        "id": "fake submit id",
        "label": "fake submit label",
        "url": "fake submit url",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        false,
        false,
        <Link
          className="flex-1 fake submit className"
          disabled={false}
          id="fake submit id"
          replace={false}
          to="fake submit url"
        >
          fake submit label
        </Link>,
        false,
      ],
      "className": "pc-final-form-footer dotted-top-2x-white py7 flex-0 flex-columns text-center items-center fs20 fake className",
    },
    "ref": null,
    "rendered": Array [
      false,
      false,
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "fake submit label",
          "className": "flex-1 fake submit className",
          "disabled": false,
          "id": "fake submit id",
          "replace": false,
          "to": "fake submit url",
        },
        "ref": null,
        "rendered": "fake submit label",
        "type": [Function],
      },
      false,
    ],
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          false,
          false,
          <Link
            className="flex-1 fake submit className"
            disabled={false}
            id="fake submit id"
            replace={false}
            to="fake submit url"
          >
            fake submit label
          </Link>,
          false,
        ],
        "className": "pc-final-form-footer dotted-top-2x-white py7 flex-0 flex-columns text-center items-center fs20 fake className",
      },
      "ref": null,
      "rendered": Array [
        false,
        false,
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "fake submit label",
            "className": "flex-1 fake submit className",
            "disabled": false,
            "id": "fake submit id",
            "replace": false,
            "to": "fake submit url",
          },
          "ref": null,
          "rendered": "fake submit label",
          "type": [Function],
        },
        false,
      ],
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`src | components | forms | FormFooter match the snapshots show submit as a text link 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormFooter
    cancel={
      Object {
        "className": "fake cancel className",
        "disabled": false,
        "id": "fake cancel id",
        "label": "fake cancel label",
        "url": "fake cancel url",
      }
    }
    className="fake className"
    externalLink={null}
    submit={
      Object {
        "className": "fake submit className",
        "disabled": false,
        "id": "fake submit id",
        "label": "fake submit label",
        "url": "fake submit url",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="flex-1 fake cancel className"
          disabled={false}
          id="fake cancel id"
          replace={false}
          to="fake cancel url"
        >
          fake cancel label
        </Link>,
        false,
        <hr
          className="dotted-left-2x-white flex-0"
        />,
        <Link
          className="flex-1 fake submit className"
          disabled={false}
          id="fake submit id"
          replace={false}
          to="fake submit url"
        >
          fake submit label
        </Link>,
        false,
      ],
      "className": "pc-final-form-footer dotted-top-2x-white py7 flex-0 flex-columns text-center items-center fs20 fake className",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "fake cancel label",
          "className": "flex-1 fake cancel className",
          "disabled": false,
          "id": "fake cancel id",
          "replace": false,
          "to": "fake cancel url",
        },
        "ref": null,
        "rendered": "fake cancel label",
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "dotted-left-2x-white flex-0",
        },
        "ref": null,
        "rendered": null,
        "type": "hr",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "fake submit label",
          "className": "flex-1 fake submit className",
          "disabled": false,
          "id": "fake submit id",
          "replace": false,
          "to": "fake submit url",
        },
        "ref": null,
        "rendered": "fake submit label",
        "type": [Function],
      },
      false,
    ],
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="flex-1 fake cancel className"
            disabled={false}
            id="fake cancel id"
            replace={false}
            to="fake cancel url"
          >
            fake cancel label
          </Link>,
          false,
          <hr
            className="dotted-left-2x-white flex-0"
          />,
          <Link
            className="flex-1 fake submit className"
            disabled={false}
            id="fake submit id"
            replace={false}
            to="fake submit url"
          >
            fake submit label
          </Link>,
          false,
        ],
        "className": "pc-final-form-footer dotted-top-2x-white py7 flex-0 flex-columns text-center items-center fs20 fake className",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "fake cancel label",
            "className": "flex-1 fake cancel className",
            "disabled": false,
            "id": "fake cancel id",
            "replace": false,
            "to": "fake cancel url",
          },
          "ref": null,
          "rendered": "fake cancel label",
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "dotted-left-2x-white flex-0",
          },
          "ref": null,
          "rendered": null,
          "type": "hr",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "fake submit label",
            "className": "flex-1 fake submit className",
            "disabled": false,
            "id": "fake submit id",
            "replace": false,
            "to": "fake submit url",
          },
          "ref": null,
          "rendered": "fake submit label",
          "type": [Function],
        },
        false,
      ],
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`src | components | forms | FormFooter match the snapshots show submit as submit button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <FormFooter
    cancel={
      Object {
        "className": "fake cancel className",
        "disabled": false,
        "id": "fake cancel id",
        "label": "fake cancel label",
        "url": "fake cancel url",
      }
    }
    className="fake className"
    externalLink={null}
    submit={
      Object {
        "className": "fake submit className",
        "disabled": false,
        "id": "fake submit id",
        "label": "fake submit label",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          className="flex-1 fake cancel className"
          disabled={false}
          id="fake cancel id"
          replace={false}
          to="fake cancel url"
        >
          fake cancel label
        </Link>,
        false,
        <hr
          className="dotted-left-2x-white flex-0"
        />,
        false,
        <button
          className="flex-1 fake submit className"
          disabled={false}
          id="fake submit id"
          type="submit"
        >
          fake submit label
        </button>,
      ],
      "className": "pc-final-form-footer dotted-top-2x-white py7 flex-0 flex-columns text-center items-center fs20 fake className",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "fake cancel label",
          "className": "flex-1 fake cancel className",
          "disabled": false,
          "id": "fake cancel id",
          "replace": false,
          "to": "fake cancel url",
        },
        "ref": null,
        "rendered": "fake cancel label",
        "type": [Function],
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "dotted-left-2x-white flex-0",
        },
        "ref": null,
        "rendered": null,
        "type": "hr",
      },
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "fake submit label",
          "className": "flex-1 fake submit className",
          "disabled": false,
          "id": "fake submit id",
          "type": "submit",
        },
        "ref": null,
        "rendered": "fake submit label",
        "type": "button",
      },
    ],
    "type": "footer",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            className="flex-1 fake cancel className"
            disabled={false}
            id="fake cancel id"
            replace={false}
            to="fake cancel url"
          >
            fake cancel label
          </Link>,
          false,
          <hr
            className="dotted-left-2x-white flex-0"
          />,
          false,
          <button
            className="flex-1 fake submit className"
            disabled={false}
            id="fake submit id"
            type="submit"
          >
            fake submit label
          </button>,
        ],
        "className": "pc-final-form-footer dotted-top-2x-white py7 flex-0 flex-columns text-center items-center fs20 fake className",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "fake cancel label",
            "className": "flex-1 fake cancel className",
            "disabled": false,
            "id": "fake cancel id",
            "replace": false,
            "to": "fake cancel url",
          },
          "ref": null,
          "rendered": "fake cancel label",
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "dotted-left-2x-white flex-0",
          },
          "ref": null,
          "rendered": null,
          "type": "hr",
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "fake submit label",
            "className": "flex-1 fake submit className",
            "disabled": false,
            "id": "fake submit id",
            "type": "submit",
          },
          "ref": null,
          "rendered": "fake submit label",
          "type": "button",
        },
      ],
      "type": "footer",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
  Symbol(enzyme.__childContext__): null,
}
`;
